# 6502-Emulator

./: .gitignore  CMakeLists.txt  README.md  README.pt-br.md  main.cpp
src/: Assembler.cpp  Assembler.h  Assembler_Class.cpp  Assembler_Class.h  Base.h  CMakeLists.txt  CPU.cpp  CPU.h  CPU_Commons.cpp  CPU_Execution.cpp  Code_Converter.cpp  Emulator.cpp  Instructions.cpp  Instructions.h  Memory.cpp  Memory.h  main_Assembler.cpp  main_Emulator.cpp
test/: AND_Test.cpp  ASL_Test.cpp  BIT_Test.cpp  BRK-RTI_Test.cpp  CMakeLists.txt  CPU_Model.h  EOR_Test.cpp  EmuTest.cpp  INC-DEC_Test.cpp  JSR-RTS_Test.cpp  JumpFamily_Test.cpp  LDA_Test.cpp  LDX_Test.cpp  LDY_Test.cpp  LSR_Test.cpp  ORA_Test.cpp  ROL_Test.cpp  ROR_Test.cpp  STA_Test.cpp  STX_Test.cpp  STY_Test.cpp  ShiftFamily_Test.cpp  StackFamily_Test.cpp
test/Instructions/: CPU_Model.h
test/Instructions/Bitwise/: AND_Test.cpp  ASL_Test.cpp  EOR_Test.cpp  LSR_Test.cpp  ORA_Test.cpp  ROL_Test.cpp  ROR_Test.cpp
test/Instructions/Branch/: BCC-BCS_Test.cpp  BNE-BEQ_Test.cpp  BPL-BMI_Test.cpp  BVC-BVS_Test.cpp
test/Instructions/Compare/: BIT_Test.cpp  CMP_Test.cpp  CPX_Test.cpp  CPY_Test.cpp
test/Instructions/Jump/: BRK-RTI_Test.cpp  JumpFamily_Test.cpp
test/Instructions/Math/: ADC_Test.cpp  SBC_Test.cpp
test/Instructions/Memory/: INC-DEC_Test.cpp  LDA_Test.cpp  LDX_Test.cpp  LDY_Test.cpp  STA_Test.cpp  STX_Test.cpp  STY_Test.cpp
test/Instructions/Other/: FlagFamily.cpp
test/Instructions/Stack/: StackFamily_Test.cpp
test/Instructions/Transfer/: RegisterFamily_Test.cpp  StackFamily_Test.cpp
